"Removed state field from Appointments model and controller, updated appointment creation and retrieval logic, and made changes to client-side components and templates."

--- a/appointmentmanagementsystem.client/src/app/user-make-appointment/user-make-appointment.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-make-appointment/user-make-appointment.component.html
@@ -1,6 +1,9 @@
 <div class="container-usermain">
+    
     <app-toolbar></app-toolbar>
+    
     <div class="bg-main">
+        <h1 class="title">Make an appointment</h1>
         <div class="calendar-hour-container">
             <mat-calendar #picker class="calendar" (selectedChange)="onDateSelected($event)"></mat-calendar>
             <div class="hours">
