--- a/appointmentmanagementsystem.client/src/app/user-make-appointment/user-make-appointment.component.css
+++ b/appointmentmanagementsystem.client/src/app/user-make-appointment/user-make-appointment.component.css
@@ -133,3 +133,9 @@
 ::ng-deep .mat-calendar .mat-calendar-body-label{
     font-weight:700;
 }
+
+.title{
+  color:white;
+  position:relative;
+  top:50px;
+}
