--- a/appointmentmanagementsystem.client/src/app/appointments/appointments.component.html
+++ b/appointmentmanagementsystem.client/src/app/appointments/appointments.component.html
@@ -1,9 +1,5 @@
 @for(appointment of allAppointments; track $index){
     <div>
-        <p>{{appointment.id_appointment}}</p>
-        <p>{{appointment.username}}</p>
-        <p>{{appointment.date}}</p>
-        <p>{{appointment.appointment_time}}</p>
-        
+        <p>{{appointment.id_appointment}} {{appointment.username}} {{appointment.date}} {{appointment.appointment_time}}</p>
     </div>
 }
