--- a/appointmentmanagementsystem.client/src/app/admin-main/admin-main.component.css
+++ b/appointmentmanagementsystem.client/src/app/admin-main/admin-main.component.css
@@ -1,9 +1,25 @@
-.next-appointment{
-    background-color: azure;
+.next-appointment-container{
+    width: 400px;
+    height: 500px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    /*background:var(--bg-dark-main);*/
 }
-
+.next-appointment{
+    margin: 15%;
+    width: 100%;
+    height: 100%;
+}
+.next-appointment-title, .next-appointment-hour, .next-appointment p{
+    color:white;
+    text-align: center;
+    font-weight: 500;
+    font-size: 25px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .today-appointment{
-    background-color: #13131A;
+    background:var(--bg-dark-main);
     width: 400px;
     height: 500px;
 }
@@ -19,7 +35,7 @@
     justify-content: center;
     flex-wrap: nowrap;
     flex-direction: row;
-    gap: 5rem;
+    gap: 8em;
 
     justify-content: center;
     align-items: center;
