--- a/appointmentmanagementsystem.client/src/styles.css
+++ b/appointmentmanagementsystem.client/src/styles.css
@@ -1,12 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
-    --bg-gradient-main:conic-gradient(from 135deg at 50% 50%, #000000 -59.38deg, #003A64 115.22deg, #5B4261 187.22deg, #000000 300.62deg, #003A64 475.22deg);
+    /*Dark Mode*/
+    --bg-gradient-main-dark:conic-gradient(from 135deg at 50% 50%, #000000 -59.38deg, #003A64 115.22deg, #5B4261 187.22deg, #000000 300.62deg, #003A64 475.22deg);
     --bg-dark-main:#13131A;
     --bg-appointment-dark:#373749;
     --bg-appointment-dark-hover:#5f5f7e;
+    --bg-btn-primary-dark:#5C5C85;
     --bg-container-dark: #272735;
     --bg-container-dark1:#191A2C;
     --bg-container-dark2:#20232F;
+    /*Light Mode*/
+    --bg-gradient-main-light:linear-gradient(107.56deg, #48B2FF 0%, #972B99 100%);
+    --bg-light-main:#F4F4F4;
+    --bg-appointment-light:#373749;
+    --bg-appointment-light-hover:#5f5f7e;
+    --bg-btn-primary-light:#5C5C85;
+    --bg-container-light: #272735;
+    --bg-container-light1:#191A2C;
+    --bg-container-light2:#20232F;
+    
 }
 
 html, body {
@@ -16,7 +28,7 @@ html, body {
     height: 100%;
     width: 100%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: var(--bg-gradient-main) ;
+    background: var(--bg-gradient-main-dark) ;
 }
 app-root {
     height: 100%;
