--- a/appointmentmanagementsystem.client/src/styles.css
+++ b/appointmentmanagementsystem.client/src/styles.css
@@ -9,6 +9,7 @@
     --bg-container-dark: #272735;
     --bg-container-dark1:#191A2C;
     --bg-container-dark2:#20232F;
+    --bg-table1-dark: #0A0A0E;
     /*Light Mode*/
     --bg-gradient-main-light:linear-gradient(107.56deg, #48B2FF 0%, #972B99 100%);
     --bg-light-main:#F4F4F4;
