--- a/appointmentmanagementsystem.client/src/app/account/account.component.css
+++ b/appointmentmanagementsystem.client/src/app/account/account.component.css
@@ -5,4 +5,81 @@
     left: 50%;
     transform: translate(-50%, -50%);*/
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 25px;
+    gap: 15px;
+    min-width: 420px;
+  
+    border-radius: 5px;
 }
+input {
+    color: #FFFFFF;
+    margin: 4%;
+    border: 2px solid rgb(85, 85, 85);
+    /* border: 1px solid rgba(255, 255, 255, 0.5); */
+    /* box-sizing: border-box; */
+    background-color: transparent;
+    padding: 5px;
+    /* size: 500px; */
+    transform: scale(1.5);
+    position: relative;
+    transition: 0.3s;
+}
+
+input:focus {
+    outline: none;
+    /* Remove the default outline when the input is focused */
+    border-color: #5C5C85;
+    /* Set the border color when the input is focused */
+    box-shadow: 0 0 5px #3e3e5b;
+    /* Set the box shadow when the input is focused */
+}
+small{
+    display: block;
+    margin: 0;
+    color: rgb(151, 21, 21);
+    font-weight: bold;
+    transition: 0.3s;
+}
+small:active{
+    top: 15px;
+}
+.error-container {
+    border: 1px solid red;
+    padding: 5px;
+   /*background-color: #f8d7da;*/
+}
+.error-container::placeholder {
+    color: red;
+}
+.error-container:focus {
+    border-color: rgb(252, 74, 74);
+    /* Set the border color when the input is focused */
+    box-shadow: 0 0 5px rgb(255, 0, 0);
+}
+.btn {
+    font-family: inherit;
+    border: 1px solid #5C5C85;
+    font-weight: bolder;
+    font-size: 16px;
+    color: #FFFFFF;
+    border-radius: 99px;
+    width: 235px;
+    height: 53px;
+    cursor: pointer;
+}
+.primary-btn{
+    background:var(--bg-btn-primary-dark);
+}
+h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 44px;
+    color: #FFFFFF;
+}
+
