--- a/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.css
+++ b/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.css
@@ -63,7 +63,7 @@ mat-icon:active{
     height: 100%; /* Ocupa toda la altura de la pantalla 
     transition: width 0.3s ease, opacity 0.3s ease;*/
     transition: 0.3s;
-    z-index: 1;
+    z-index: 1001;
   }
   
   .sidenav-container.closed {
@@ -111,6 +111,7 @@ mat-icon:active{
     z-index: 1;
     border-radius: 5px;
     box-shadow:rgba(0, 0, 0, 0.247) 5px 5px 10px;
+    z-index: 1001;
 }
 
 .close-button{
@@ -121,6 +122,7 @@ mat-icon:active{
 }
 .sidenav-container.closed {
     width: 0;
+    z-index: 1001;
     /* Otros estilos para el estado cerrado */
   }
   
@@ -128,3 +130,13 @@ mat-icon:active{
     width: 250px; /* o el valor que desees */
     /* Otros estilos para el estado abierto */
   }
+
+  
+#dark-overlay, .dark-overlay {
+  /* display: none; Se mostrará cuando se active */
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); /* Oscurecido con transparencia */
+  z-index: 1000; /* Asegura que esté sobre el contenido pero debajo del pop-up */
+}
